--- a/PDM/package.json
+++ b/PDM/package.json
@@ -20,9 +20,16 @@
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/file-opener": "^5.31.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/pwa-elements": "^3.0.2",
+    "chart.js": "^2.9.4",
+    "cordova-pdf-generator": "^2.1.1",
+    "cordova-plugin-file-opener2": "^3.0.5",
+    "ng2-charts": "^2.4.2",
+    "pdfmake": "^0.1.70",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
