--- a/PDM/package.json
+++ b/PDM/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~10.0.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/file-opener": "^5.31.1",
+    "@ionic-native/pdf-generator": "^5.31.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
@@ -57,5 +58,10 @@
     "tslint": "~6.1.0",
     "typescript": "~3.9.5"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-pdf-generator": {}
+    }
+  }
 }
