--- a/PDM/package.json
+++ b/PDM/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/pwa-elements": "^3.0.2",
+    "@yellowspot/ng-truncate": "^2.0.0",
     "chart.js": "^2.9.4",
     "cordova-pdf-generator": "^2.1.1",
     "cordova-plugin-file-opener2": "^3.0.5",
